started dto strcuct
